0: offSets type Integer